--- a/reactive/src/main/resources/application.yaml
+++ b/reactive/src/main/resources/application.yaml
@@ -21,4 +21,4 @@ mongock:
   runner-type: "ApplicationRunner" # default
   #runner-type: "InitializingBean"
   change-logs-scan-package:
-    - lesson41.hw.migration
+    - hw.migration
